# ww2-bayesian-counterfactual-simulator

./: .gitignore  README.md  app.py  pyproject.toml  test_engine.py  test_influence.py  test_scenarios.py
analysis/: influence.py
game/: decisions.py  game_engine.py  roles.py  turn_manager.py  world_state.py
model/: cpds.py  inference_engine.py  structure.py
narrative/: generator.py
simulation/: scenario_runner.py
utils/: config.py
visualization/: causal_graph.py  probability_plot.py
