[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ww2-causal-intervention-lab"
version = "0.1.0"
description = "Bayesian counterfactual simulation platform modeling WWII strategic decisions as a causal graphical model."
authors = [
    { name = "bharath" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "streamlit>=1.32.0",
    "pgmpy>=0.1.24",
    "networkx>=3.2",
    "plotly>=5.18.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/tenjiku-dotcom98/ww2-bayesian-counterfactual-simulator"